--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -34,4 +34,10 @@ a {
     color: black;
 }
 
-@import "./pages-scss//home.scss"
+@import "./pages-scss/home.scss";
+@import "./pages-scss/project.scss";
+@import "./pages-scss/work.scss";
+@import "./pages-scss/tool.scss";
+@import "./pages-scss/blog.scss";
+@import "./pages-scss/form.scss";
+@import "./pages-scss/project-details.scss";
