--- a/src/styles/pages-scss/home.scss
+++ b/src/styles/pages-scss/home.scss
@@ -10,6 +10,7 @@
 
     .tooltip-container {
         background-color: #1C1A19;
+        // background-color: aqua;
         padding-inline: 28px;
         padding-block: 14px;
         color: white;
@@ -24,10 +25,10 @@
             align-items: center;
             gap: 30px;
         }
-
     }
-
 }
+
+
 
 .popup {
     background-color: #1C1A19;
@@ -52,6 +53,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin-bottom: 100px;
 
     .banner {
         // background-color: aqua;
@@ -196,11 +198,40 @@
                         color: $heading-one;
                         font-family: $font-poppins;
                         font-weight: 500;
-                        font-size: 16px;
                         background-color: $heading-two;
                         border-radius: 12px;
                         padding-inline: 44px;
                         padding-block: 24px;
+
+                        >p {
+                            font-size: 14px;
+                        }
+
+                    }
+
+                    .work-info {
+                        color: white;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        gap: 20px;
+                        transition: transform 0.3s ease, color 0.3s ease;
+                    }
+
+                    .work-info:hover {
+                        transform: scale(1.05);
+                    }
+
+                    .work-info h1 {
+                        transition: transform 0.3s ease, color 0.3s ease;
+                    }
+
+                    .work-info:hover h1 {
+                        transform: translateX(15px);
+                    }
+
+                    >Button:hover {
+                        box-shadow: 0px 0px 54px 0px black;
                     }
                 }
             }
@@ -275,7 +306,6 @@
                         justify-content: center;
                         align-items: center;
                         margin-block-start: 10px;
-                        margin-inline-start: 80px;
 
                         .achivements-card {
 
@@ -428,7 +458,7 @@
                     flex-direction: column;
                     // margin-block-start: 10px;
                     gap: 20px;
-                    margin-inline-end: 80px;
+                    // margin-inline-end: 80px;
 
 
                     .achivements-card {
@@ -452,6 +482,17 @@
                         }
 
                     }
+                }
+
+                .info {
+                    margin-top: 36px;
+                    display: flex;
+                    // flex-direction: column;
+                    gap: 20px;
+
+
+
+
                 }
             }
         }
