--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -37,7 +37,8 @@ a {
 @import "./pages-scss/home.scss";
 @import "./pages-scss/project.scss";
 @import "./pages-scss/work.scss";
-@import "./pages-scss/tool.scss";
+@import "./pages-scss/tool-one.scss";
+@import "./pages-scss/tool-two.scss";
 @import "./pages-scss/blog.scss";
 @import "./pages-scss/form.scss";
 @import "./pages-scss/project-details.scss";
