--- a/src/styles/pages-scss/tool-two.scss
+++ b/src/styles/pages-scss/tool-two.scss
@@ -19,7 +19,7 @@
 }
 
 
-.tool-box {
+.tools-box {
     width: 343px;
     height: 92px;
     display: flex;
@@ -31,11 +31,11 @@
     padding-left: 20px;
 }
 
-.tool-box:hover {
+.tools-box:hover {
     background-color: #1C1A19;
 }
 
-.tool-img {
+.tools-img {
     width: 20%;
 
     >img {
@@ -44,7 +44,7 @@
 }
 
 
-.tool-des {
+.tools-des {
     display: flex;
     flex-direction: column;
     color: #988E8E;
@@ -91,13 +91,13 @@
 @media (max-width: 500px) {
 
 
-    .tool-box {
+    .tools-box {
         width: 300px;
         height: 92px;
 
     }
 
-    .tool-img {
+    .tools-img {
         width: 16%;
 
         >img {
@@ -106,7 +106,7 @@
     }
 
 
-    .tool-des {
+    .tools-des {
 
 
         >h1 {
