--- a/src/styles/pages-scss/blog.scss
+++ b/src/styles/pages-scss/blog.scss
@@ -68,6 +68,25 @@
     color: orange;
 }
 
+.blog-des {
+
+    width: 100%;
+
+
+    >p {
+        color: #988E8E;
+    }
+
+    >h1 {
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+
+    >h1:hover {
+        color: white;
+    }
+}
+
 
 @media (max-width: 1335px) {
     .blog-container {
