--- a/src/styles/pages-scss/project.scss
+++ b/src/styles/pages-scss/project.scss
@@ -29,7 +29,10 @@
 .project-card-container {
     // background-color: aquamarine;
     padding-inline: 20px;
+    overflow: hidden;
+    margin-bottom: 100px;
 }
+
 
 .cards {
     // background-color: red;
@@ -39,8 +42,8 @@
     padding-inline: 20px;
     padding-block: 30px;
     gap: 28px;
-    margin-bottom: 40px;
-    overflow: hidden;
+    margin-bottom: 80px;
+    // overflow: hidden;
 }
 
 
@@ -56,6 +59,7 @@
     overflow: hidden;
 
     >img {
+        // padding: 50px;
         width: 100%;
         height: 250px;
         object-fit: cover;
@@ -65,7 +69,7 @@
     }
 
     >img:hover {
-        transform: scale(1.5);
+        transform: scale(1.2);
     }
 }
 
@@ -85,6 +89,10 @@
 
     }
 
+    >h1:nth-child(1):hover {
+        color: white;
+    }
+
     >h1:nth-child(2) {
         color: #988E8E;
         font-family: $font-poppins;
@@ -97,7 +105,10 @@
 
 .desc:hover {
     background-color: #1C1A19;
+    color: white;
 }
+
+
 
 @media (max-width: 1335px) {
 
