--- a/src/styles/pages-scss/form.scss
+++ b/src/styles/pages-scss/form.scss
@@ -82,7 +82,7 @@ textarea:focus {
 
 @media (max-width: 1335px) {
     .form-container {
-        background-color: rgba(76, 0, 255, 0.348);
+        // background-color: rgba(76, 0, 255, 0.348);
     }
 
     .form {
@@ -109,7 +109,7 @@ textarea:focus {
 
 @media (max-width: 768px) {
     .form-container {
-        background-color: rgba(255, 174, 0, 0.348);
+        // background-color: rgba(255, 174, 0, 0.348);
     }
 
     .form {
