--- a/src/styles/pages-scss/home.scss
+++ b/src/styles/pages-scss/home.scss
@@ -159,6 +159,9 @@
                     margin-top: -60px;
                 }
 
+
+
+
                 >p {
                     color: #988E8E;
                     width: 70%;
@@ -167,6 +170,8 @@
                     // text-align: center;
                     margin-bottom: 10px;
                 }
+
+
 
                 .achivements {
                     display: flex;
@@ -382,6 +387,7 @@
                     }
 
                     >p {
+                        margin-top: 20px !important;
                         width: 80%;
                         text-align: center;
                     }
@@ -454,6 +460,7 @@
                 }
 
                 >p {
+                    margin-top: 20px !important;
                     width: 60% !important;
                     text-align: center;
                 }
