--- a/src/styles/pages-scss/tool-one.scss
+++ b/src/styles/pages-scss/tool-one.scss
@@ -8,7 +8,7 @@
 
 
 .tool {
-    width: 800px;
+    width: 1300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,4 +51,25 @@
 
 .tool-box:hover {
     transform: scale(1.3) !important;
+}
+
+@media (max-width: 450px) {
+
+    .tool {
+        gap: 10px;
+        // background-color: rgba(127, 255, 212, 0.182);
+        padding-inline: 100px;
+    }
+
+    .tool-box {
+        // background-color: antiquewhite;
+
+        >div>img {
+            width: 60px;
+        }
+
+        >h1 {
+            font-size: 14px;
+        }
+    }
 }
